--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
       <div class="logo__container">
         <a href="#" class="logo logo__link">
           <svg class="logo__img">
-            <use href="#"></use>
+            <use href="/src/index.html"></use>
           </svg>
           <p class="site-name">Filmoteka</p>
         </a>
