--- a/src/partials/main/main.html
+++ b/src/partials/main/main.html
@@ -1,3 +1,11 @@
 <main>
+  <section class="gallery-section">
+    <div class="container">
+      <div class="gallery">
+        <h2 class="visually-hidden">MOVIES GALLERY</h2>
 
+        <ul class="gallery__list"></ul>
+      </div>
+    </div>
+  </section>
 </main>
