--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,12 +9,9 @@
                 <use class="heart-icon" href="#"></use>
             </svg>             -->
             <div class="heart"></div>
-
-<!-- todo open modal ЯКЩО ПОТРІБНО ТО МОЖНА ПОФІКСИТИ -->
-<!-- todo СТИЛІ НЕ ПИСАВ, АЛЕ ТО МОЖНА -->
-            <!-- <p class="students">
+            <p class="students">
                 by <button type="button" class="underline footer__button" data-modal-open>GoIT Students</button>
-            </p> -->
+            </p>
         </div>
     </div>
 </footer>
