--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,9 +7,9 @@
 @import './utils/hidden';
 
 
-
 @import './header';
 @import './my_library/header';
+@import './utils/main-gallery.scss';
 @import './main';
 @import './footer';
 
