--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
       <div class="logo__container">
         <a href="./index.html" class="logo logo__link">
           <svg class="logo__img">
-            <use href="/images/sprite.svg#icon-logo"></use>
+            <use href="./images/sprite.svg#icon-logo"></use>
           </svg>
           <p class="site-name">Filmoteka</p>
         </a>
