--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,10 +6,8 @@
 @import './utils/common';
 @import './utils/hidden';
 
-
-
 @import './header';
 @import './my_library/header';
 @import './main';
 @import './footer';
-
+@import './utils/main-gallery.scss';
