--- a/src/sass/utils/_common.scss
+++ b/src/sass/utils/_common.scss
@@ -53,18 +53,19 @@ img {
 }
 .container {
   margin: 0 auto;
-  max-width: 1024px;
-  padding: 0 71px;
 
-  @media screen and (min-width: $mobile) {
+  padding: 0 15px;
+
+  @include mobile {
     width: 320px;
   }
 
-  @media screen and (min-width: $tablet) {
+  @include tablet {
     width: 768px;
+    padding: 0 32px;
   }
 
-  @media screen and (min-width: $desktop) {
-    width: 1024px;
+  @include desktop {
+    width: 1280px;
   }
 }
