--- a/src/partials/main/main.html
+++ b/src/partials/main/main.html
@@ -8,7 +8,7 @@
           <!-- <li class="gallery__item">
             <div class="gallery-card"></div>
             <img
-              src="/src/images/proto-desk.jpg"
+              src="#"
               alt="#"
               class="gallery-card__img"
             />
