--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -25,13 +25,20 @@
             <button
               type="button"
               class="sign-in__button nav-list__link-sign-in nav-list__link-sign-in-accent"
-              data-modal-open-sign-in
+              data-sign-in
             >
               SIGN IN
             </button>
           </li>
           <li class="nav-list__item-log-in is-hidden backdrop">
-            <a href="" class="nav-list__link-library nav-list__link-library-accent link">LOGOUT</a>
+            <!--is-hidden -->
+            <button type="button" class="sign-in__button nav-list__link-sign-in nav-list__link-sign-in-accent"
+              data-sign-out>
+              LOGOUT
+            </button>
+          <li class="nav-list__item">
+          </li >
+            <span class="display-name"></span>
           </li>
         </ul>
       </div>
