--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,7 +21,7 @@
               >MY LIBRARY</a
             >
           </li>
-          <!-- <li class="nav-list__item-sign-in">
+          <li class="nav-list__item-sign-in">
             <button
               type="button"
               class="sign-in__button nav-list__link-sign-in nav-list__link-sign-in-accent"
