make lib header
зробив шапку для бібліотеки, підправив косяки з шрифтами в картках, трішки підправив контейнер хедера, добавив скрипт для відкриття бібліотеки (необхідно ще додати рендер карток)

--- a/src/partials/main/main.html
+++ b/src/partials/main/main.html
@@ -7,11 +7,7 @@
         <ul class="gallery__list">
           <!-- <li class="gallery__item">
             <div class="gallery-card"></div>
-            <img
-              src="/src/images/proto-desk.jpg"
-              alt="#"
-              class="gallery-card__img"
-            />
+            <img src="#" alt="#" class="gallery-card__img" />
             <h3 class="gallery-card__title">GREYHOUND</h3>
             <p class="gallery-card__description">
               <span class="gallery-card__genre"
