--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -65,5 +65,11 @@
       <button type="button" class="library__btn-watched library__btn-active">WATCHED</button>
       <button type="button" class="library__btn-queue library__btn">QUEUE</button>
     </div>
+    <!-- Filter -->
+    <form class="filter-genre" id="filter-form">
+      <label class="filter-label">Choose genre:</label>
+      <select name="genres" id="genres">
+        <option value="genres">all genres</option>
+      </select>
   </div>
 </header>
