--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,12 +12,16 @@
       <div class="menu__container">
         <ul class="nav-list list">
           <li class="nav-list__item-home nav-list__item-home-active">
-            <a href="#" class="nav-list__link-home nav-list__link-home-accent link"
+            <a
+              href="#"
+              class="nav-list__link-home nav-list__link-home-accent link"
               >HOME</a
             >
           </li>
           <li class="nav-list__item-library">
-            <a href="#" class="nav-list__link-library nav-list__link-library-accent link"
+            <a
+              href="#"
+              class="nav-list__link-library nav-list__link-library-accent link"
               >MY LIBRARY</a
             >
           </li>
@@ -56,8 +60,12 @@
       </form>
     </div>
     <div class="library__btns is-hidden">
-      <button type="button" class="library__btn-watched library__btn-active">WATCHED</button>
-      <button type="button" class="library__btn-queue library__btn">QUEUE</button>
+      <button type="button" class="library__btn-watched library__btn-active">
+        WATCHED
+      </button>
+      <button type="button" class="library__btn-queue library__btn">
+        QUEUE
+      </button>
     </div>
   </div>
 </header>
