--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -61,10 +61,14 @@
 
         <button class="search__btn" type="submit">
           <svg class="search__img">
-            <use href="#"></use>
+            <use href="/images/icons/sprite.svg#icon-search"></use>
           </svg>
         </button>
       </form>
+
+      <p class="hero__search-error is-hidden">Search result not successful. Enter the correct movie name and try again!
+      </p> 
+
     </div>
     <div class="library-filter visually-hidden">
       <button type="button" class="library-filter__btn" data-watched>
