--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -22,6 +22,7 @@ $transparent: transparent;
 $primary-font-size: 12px;
 $secondary-font-size: 14px;
 $third-font-size: 16px;
+$modal-font-weight: 500;
 
 // Text variables
 $primary-font-family: 'Roboto', sans-serif;
