--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,5 +10,6 @@
 @import './my_library/header';
 @import './utils/main-gallery.scss';
 @import './main';
+@import './pagination';
 @import './footer';
 @import './utils/main-gallery.scss';
