--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -74,11 +74,13 @@
         QUEUE
       </button>
     </div>
-    <!-- Filter -->
-    <form class="filter-genre" id="filter-form">
-      <label class="filter-label">Choose genre:</label>
-      <select name="genres" id="genres">
-        <option value="genres">all genres</option>
-      </select>
+    
   </div>
+  <!-- Filter -->
+  <div class="container">
+  <form class="filter-genre" id="filter-form">
+    <label class="filter-label">Choose genre:</label>
+    <select name="genres" id="genres">
+      <option value="genres">all genres</option>
+    </select></div>
 </header>
