--- a/src/sass/_filter.scss
+++ b/src/sass/_filter.scss
@@ -1,6 +1,9 @@
 .filter-genre {
-    margin-left: 100px;
+    margin-left: 150px;
     max-width: 250px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+
 }
     @media screen and (max-width:768px) {
     .filter-genre {
@@ -33,11 +36,16 @@
     
     
     select {
-        border: 1px solid $primary-background-color;
+        border: 1px solid $secondary-text-color;
         border-radius: 5px;
-    }
+        background-color: transparent;
+        color: $lighter-text-color;
+}
+
     
     option {
         padding: 20px;
-        background-color: $header-background-color;}
+        background-color: $header-background-color;
+
+    }
         
