--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -61,7 +61,7 @@
 
         <button class="search__btn" type="submit">
           <svg class="search__img">
-            <use href="./images/icons/sprite.svg#icon-search"></use>
+            <use href="./images/sprite.svg#icon-search"></use>
           </svg>
         </button>
       </form>
