--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,11 +36,14 @@
             </button>
           </li>
           <li class="nav-list__item-log-in is-hidden backdrop">
-            <button type="button" class="sign-in__button nav-list__link-sign-in nav-list__link-sign-in-accent"
-              data-sign-out>
+            <button
+              type="button"
+              class="sign-in__button nav-list__link-sign-in nav-list__link-sign-in-accent"
+              data-sign-out
+            >
               LOGOUT
             </button>
-          </li >
+          </li>
           <li class="nav-list__item">
             <span class="display-name"></span>
           </li>
@@ -66,33 +69,28 @@
         </button>
       </form>
 
-      <p class="hero__search-error is-hidden">Search result not successful. Enter the correct movie name and try again!
-      </p> 
-
+      <p class="hero__search-error is-hidden">
+        Search result not successful. Enter the correct movie name and try
+        again!
+      </p>
     </div>
 
-    <div class="library__btns is-hidden">
-      <button type="button" class="library__btn-watched library__btn-active">
-        WATCHED
-      </button>
-      <button type="button" class="library__btn-queue library__btn">
-<!--
     <div class="library-filter visually-hidden">
       <button type="button" class="library-filter__btn" data-watched>
         WATCHED
       </button>
       <button type="button" class="library-filter__btn" data-queue>
--->
         QUEUE
       </button>
     </div>
-    
   </div>
   <!-- Filter -->
   <div class="container">
-  <form class="filter-genre" id="filter-form">
-    <label class="filter-label">Choose genre:</label>
-    <select name="genres" id="genres">
-      <option value="genres">all genres</option>
-    </select></div>
+    <form class="filter-genre" id="filter-form">
+      <label class="filter-label">Choose genre:</label>
+      <select name="genres" id="genres">
+        <option value="genres">all genres</option>
+      </select>
+    </form>
+  </div>
 </header>
