--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -7,37 +7,24 @@
         </svg>
       </a>
     </li>
-    <li class="pagination__item pagination__item-additional" data-page="">
-      <a href="" class="pagination__link">1</a>
+    <li class="pagination__item pagination__item-additional" data-page="1">
+      <a href="" class="pagination__link pagination__link-active">1</a>
     </li>
+    <li
+      class="pagination__item pagination__item-additional"
+      data-page="dots-first"
+    >
+      <svg width="11" height="16">
+        <use href="./images/sprite.svg#dots"></use>
+      </svg>
+    </li>
+
     <li class="pagination__item pagination__item-additional" data-page="">
       <svg width="11" height="16">
         <use href="./images/sprite.svg#dots"></use>
       </svg>
     </li>
-    <li class="pagination__item" data-page="">
-      <a href="" class="pagination__link">13</a>
-    </li>
-    <li class="pagination__item" data-page="">
-      <a href="" class="pagination__link">14</a>
-    </li>
-    <li class="pagination__item" data-page="">
-      <a href="" class="pagination__link pagination__link-active">15</a>
-    </li>
-    <li class="pagination__item" data-page="">
-      <a href="" class="pagination__link">16</a>
-    </li>
-    <li class="pagination__item" data-page="">
-      <a href="" class="pagination__link">17</a>
-    </li>
-    <li class="pagination__item pagination__item-additional" data-page="">
-      <svg width="11" height="16">
-        <use href="./images/sprite.svg#dots"></use>
-      </svg>
-    </li>
-    <li class="pagination__item pagination__item-additional" data-page="">
-      <a href="" class="pagination__link">20</a>
-    </li>
+
     <li class="pagination__item" data-page="next">
       <a href="" class="pagination__link">
         <svg width="16" height="16">
