--- a/src/sass/_filter.scss
+++ b/src/sass/_filter.scss
@@ -1,18 +1,10 @@
 .filter-genre {
-    margin-left: 150px;
+    margin-left: 80px;
     max-width: 250px;
-    padding-bottom: 20px;
-    padding-top: 20px;
+    padding-top: 40px;
 
 }
-    @media screen and (max-width:768px) {
-    .filter-genre {
-            margin-left: 25px;
-           
-        }
-    }
     
-  
     .filter-label {
         font-weight: 500;
         margin: 20px 0px;
@@ -20,18 +12,6 @@
         font-weight: 500;
         line-height: 1.17;
         color: $lighter-text-color;
-    
-        // &:first-child {
-        //     margin-top: 0;
-        // }
-    
-        // @media screen and (min-width:768px) {
-        //     margin: 0 20px;
-    
-        //     &:first-child {
-        //         margin-left: 0;
-        //     }
-        // }
     }
     
     
@@ -48,4 +28,14 @@
         background-color: $header-background-color;
 
     }
-        
+    @media screen and (max-width:768px) {
+            .filter-genre {
+                 margin-left: 0px;
+    
+             }
+            .filter-label {
+                display: none;
+            }
+         }
+
+   
