correct-some-fitch
1.correct div in rander
2.add position relative for switchColor Btn
3.correct color and border for switching light

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -3,6 +3,7 @@
   isolation: isolate;
 }
 .header__container {
+  position: relative;
   background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
