--- a/src/sass/utils/main-gallery.scss
+++ b/src/sass/utils/main-gallery.scss
@@ -22,6 +22,9 @@
   }
 }
 .gallery__item {
+  background-color: $footer-background-color;
+  border-radius: 5px;
+
   &:hover,
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -35,7 +38,8 @@
   }
 }
 .gallery-card__img {
-  border-radius: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 .gallery-card {
   width: 280px;
