--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -32,10 +32,12 @@
               class="sign-in__button nav-list__link-sign-in nav-list__link-sign-in-accent"
               data-sign-in
             >
-              SIGN IN
+              <span>SIGN IN</span><span class="google__sign-in"></span>
             </button>
+            
           </li>
           <li class="nav-list__item-log-in is-hidden backdrop">
+            <span class="display-name"></span>
             <button
               type="button"
               class="sign-in__button nav-list__link-sign-in nav-list__link-sign-in-accent"
@@ -43,9 +45,6 @@
             >
               LOGOUT
             </button>
-          </li>
-          <li class="nav-list__item">
-            <span class="display-name"></span>
           </li>
         </ul>
       </div>
