--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -123,7 +123,9 @@
 .display-name {
   margin-right: 10px;
 }
-
+.nav-list__item-log-in {
+    display: flex;
+}
 .search {
   display: flex;
   align-items: flex-end;
