--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -19,7 +19,10 @@
       </svg>
     </li>
 
-    <li class="pagination__item pagination__item-additional" data-page="">
+    <li
+      class="pagination__item pagination__item-additional"
+      data-page="dots-second"
+    >
       <svg width="11" height="16">
         <use href="./images/sprite.svg#dots"></use>
       </svg>
