footer with modal

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,16 +3,12 @@
         <p class="footer__copyright">&#169; 2022 | All Rights Reserved |</p>
         <div class="footer__developed">
             <p class="developed">Developed with</p>
-
-<!-- todo прикрутити іконку -->
-            <!-- <svg class="footer__heart-icon">
-                <use class="heart-icon" href="#"></use>
-            </svg>             -->
-            <div class="heart"></div>
+            <svg class="footer__heart-icon" width="14" height="12">
+                <use class="heart-icon" href="./images/sprite.svg#icon-heart" ></use>
+            </svg>      
             <p class="students">
-                by <button type="button" class="underline footer__button" data-modal-open>GoIT Students</button>
+                by <button type="button" class="footer__button team-modal" data-modal-open>GoIT Students</button>
             </p>
         </div>
     </div>
 </footer>
-<!--  -->
