--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -2,7 +2,7 @@
   width: 100%;
   background: $footer-background-color;
 
-		&__container {
+  &__container {
     height: 100px;
     display: flex;
     flex-direction: column;
@@ -13,35 +13,32 @@
     font-size: 14px;
     line-height: 1.14;
 
-      @media screen and (min-width: $tablet) {
-        height: 77px;
-        padding-top: 30px;
-        padding-bottom: 28px;
-        flex-direction: row;
-        font-size: 16px;
-        line-height: 1.19;
-      }
-		}
+    @media screen and (min-width: $tablet) {
+      height: 77px;
+      padding-top: 30px;
+      padding-bottom: 28px;
+      flex-direction: row;
+      font-size: 16px;
+      line-height: 1.19;
+    }
+  }
 
-		&__copyright {
+  &__copyright {
     display: flex;
     justify-content: center;
     margin-bottom: 10px;
-    
-      @media screen and (min-width: $tablet) {
-        margin-right: 3px;
-        margin-bottom: 0;
-      }
-		}
-// todo стилі для кнопки команди розробників
-		&__developed {
-		}
-// todo написати стилі для іконки
-// ! порадитись з командою чи потрібне це серце
-		&__heart-icon {
-		}
 
-		&__button {
+    @media screen and (min-width: $tablet) {
+      margin-right: 3px;
+      margin-bottom: 0;
+    }
+  }
+
+  &__developed {
+    display: flex;
+  }
+
+  &__button {
     padding: 0;
     border: 0px;
     background-color: $footer-background-color;
@@ -49,6 +46,7 @@
     cursor: pointer;
     border-bottom: 1px solid $secondary-text-color;
   }
+
   &__button:focus,
   &__button:hover {
     color: $accent-color;
@@ -56,46 +54,120 @@
     transition: color 200ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
+
 .developed {
+  margin-right: 10px;
 }
+
 .heart-icon {
-}
-.heart {
-  // todo анімація 
-  background-color: $accent-color;
-  display: inline-block;
-  height: 8px;
-  margin: 0 10px 0 10px;
-
-  top: 0;
-  transform: rotate(-45deg);
-
-  left: 45%;
-  top: 45%;
-  width: 8px;
-}
-
-.heart:before,
-.heart:after {
-  content: '';
-  background-color: $accent-color;
-  border-radius: 50%;
-  height: 8px;
-  position: absolute;
-  width: 8px;
-}
-
-.heart:before {
-  top: -4px;
-  left: 0;
-}
-
-.heart:after {
-  left: 4px;
-  top: 0;
+  fill: $accent-color ;
 }
 
 .students {
+  margin-left: 10px;
 }
-.underline {
+
+//Modal
+
+.basicLightbox {
+  overflow: scroll;
+}
+
+.team-list {
+  display: flex;
+  flex-wrap: wrap;
+
+  margin: 185px -15px 15px -15px;
+  width: 200px;
+
+
+  background-color: $white;
+  border-radius: 15px;
+
+  @media screen and (min-width: $tablet) {
+    margin: -15px;
+    width: 600px;
+
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin: -30px;
+    width: 600px;
+  }
+}
+
+.team-card {
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin: 15px;
+
+  width: calc((100% - 65px) / 2);
+
+  @media screen and (min-width: $tablet) {
+    //width: calc((100% - 130px) / 4);
+    width: calc((100% - 240px) / 4);
+    margin: 15px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin: 30px;
+
+    width: calc((100% - 240px) / 4);
+  }
+}
+
+.team-image {
+  margin-bottom: 10px;
+
+  height: 100%;
+  width: 100%;
+
+  border-radius: 10%;
+  box-shadow: 5px 5px 5px -2px rgba($color: #606060, $alpha: 1.0);
+}
+
+.team-name {
+  margin-bottom: 5px;
+
+  @media screen and (min-width: $tablet) {
+    font-weight: 700;
+  }
+}
+
+.team-role {
+  font-size: 10px;
+  color: $accent-color;
+
+  @media screen and (min-width: $tablet) {
+    font-size: 14px;
+  }
+}
+
+.team-git {
+  position: absolute;
+
+  top: -6px;
+  left: -6px;
+  transform: scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    transform: scale(1.5);
+  }
+
+  @media screen and (min-width: $tablet) {
+    top: 0px;
+    left: 0px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    top: 0px;
+    left: 0px;
+  }
+
 }
