--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,5 +1,5 @@
 <div>
-  <ul class="pagination">
+  <ul class="pagination is-hidden">
     <li class="pagination__item" data-page="previous">
       <a href="" class="pagination__link"
         ><svg width="16" height="16">
