--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -26,6 +26,10 @@
     line-height: 1.17;
   }
 }
+
+.hero__search-error {
+  color: $warning-text-color;
+}
 .is-hidden {
   visibility: hidden;
   pointer-events: none;
@@ -111,20 +115,19 @@
   padding: 0;
 }
 
-.google__sign-in{
+.google__sign-in {
   display: block;
   margin-left: 2px;
   width: 20px;
   height: 20px;
-  background-image:
-      url('../images/logo-google-mini.png');
+  background-image: url('../images/logo-google-mini.png');
 }
 
 .display-name {
   margin-right: 10px;
 }
 .nav-list__item-log-in {
-    display: flex;
+  display: flex;
 }
 .search {
   display: flex;
