--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,4 +1,4 @@
-<div>
+<div class="pagination-wrap visually-hidden">
   <ul class="pagination">
     <li class="pagination__item" data-page="previous">
       <a href="" class="pagination__link"
