--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,54 +1,56 @@
 <header class="header">
-  <div class="container header__container header__container-non-active">
-    <nav class="nav">
-      <div class="logo__container">
-        <a href="./index.html" class="logo logo__link">
-          <svg class="logo__img">
-            <use href="./images/sprite.svg#icon-logo"></use>
-          </svg>
-          <p class="site-name">Filmoteka</p>
-        </a>
-      </div>
-      <div class="menu__container">
-        <ul class="nav-list list">
-          <li class="nav-list__item-home nav-list__item-home-active">
-            <a
-              href="#"
-              class="nav-list__link-home nav-list__link-home-accent link"
-              >HOME</a
-            >
-          </li>
-          <li class="nav-list__item-library">
-            <a
-              href="#"
-              class="nav-list__link-library nav-list__link-library-accent link"
-              data-library
-              >MY LIBRARY</a
-            >
-          </li>
-          <li class="nav-list__item-sign-in">
-            <button
-              type="button"
-              class="sign-in__button nav-list__link-sign-in nav-list__link-sign-in-accent"
-              data-sign-in
-            >
-              <span>SIGN IN</span><span class="google__sign-in"></span>
-            </button>
-            
-          </li>
-          <li class="nav-list__item-log-in is-hidden backdrop">
-            <span class="display-name"></span>
-            <button
-              type="button"
-              class="sign-in__button nav-list__link-sign-in nav-list__link-sign-in-accent"
-              data-sign-out
-            >
-              LOGOUT
-            </button>
-          </li>
-        </ul>
-      </div>
+  <div class="container header-container">
+    <div class="logo__container">
+      <a href="./index.html" class="logo logo__link">
+        <svg class="logo__img">
+          <use href="./images/sprite.svg#icon-logo"></use>
+        </svg>
+        <p class="site-name">Filmoteka</p>
+      </a>
+    </div>
+    <nav class="nav-list">
+      <!-- <ul class="nav-list list"> -->
+      <li class="nav-list__item-home nav-list__item-home-active">
+        <a
+          href="#"
+          class="nav-list__link-home nav-list__link-home-accent link"
+          data-home
+          >HOME</a
+        >
+      </li>
+      <li class="nav-list__item-library">
+        <a
+          href="#"
+          class="nav-list__link-library nav-list__link-library-accent link"
+          data-library
+          >MY LIBRARY</a
+        >
+      </li>
+      <!-- </ul> -->
     </nav>
+    <div class="menu__container">
+      <ul>
+        <li class="nav-list__item-sign-in">
+          <button
+            type="button"
+            class="sign-in__button nav-list__link-sign-in nav-list__link-sign-in-accent"
+            data-sign-in
+          >
+            <span>SIGN IN</span><span class="google__sign-in"></span>
+          </button>
+        </li>
+        <li class="nav-list__item-log-in is-hidden backdrop">
+          <span class="display-name"></span>
+          <button
+            type="button"
+            class="sign-in__button nav-list__link-sign-in nav-list__link-sign-in-accent"
+            data-sign-out
+          >
+            LOGOUT
+          </button>
+        </li>
+      </ul>
+    </div>
     <div class="search">
       <form class="search__form">
         <input
@@ -83,14 +85,12 @@
       </button>
     </div>
     <!-- Filter -->
-    
-      <form class="filter-genre" id="filter-form">
-        <label class="filter-label">Choose genre:</label>
-        <select name="genres" id="genres">
-          <option value="genres">all genres</option>
-        </select>
-      </form>
-    
+
+    <form class="filter-genre" id="filter-form">
+      <label class="filter-label">Choose genre:</label>
+      <select name="genres" id="genres">
+        <option value="genres">all genres</option>
+      </select>
+    </form>
   </div>
-  
 </header>
