--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,35 +1,55 @@
 .header {
-  background-color: $primary-text-color;
+  background-color: gray;
   isolation: isolate;
-}
-.header__container {
-  position: relative;
-  background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
-  // height: 230px;
-  // width: 320px;
+  background-position: 50% 50%;
+  margin: 0 auto;
+  min-width: 320px;
   padding-top: 40px;
   padding-bottom: 60px;
+  // background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+  //   url(../images/header-bg/header-bkg-mobile-1@1x.png);
+
+  // @media (min-device-pixel-ratio: 2),
+  //   (min-resolution: 192dpi),
+  //   (min-resolution: 2dppx) {
+  //   background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+  //     url(../images/header-bg/header-bkg-mobile-1@2x.png);
+  // }
+  // @include tablet {
+  //   background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+  //     url(../images/header-bg/header-bkg-tablet-1@1x.png);
+  //   @media (min-device-pixel-ratio: 2),
+  //     (min-resolution: 192dpi),
+  //     (min-resolution: 2dppx) {
+  //     background-image: linear-gradient(
+  //         rgba(0, 0, 0, 0.56),
+  //         rgba(0, 0, 0, 0.56)
+  //       ),
+  //       url(../images/header-bg/header-bkg-tablet-1@2x.png);
+  //   }
+  // }
+  // @include desktop {
+  //   background-image: linear-gradient(
+  //       rgba(47, 48, 58, 0.4),
+  //       rgba(47, 48, 58, 0.4)
+  //     ),
+  //     url(../images/header-bg/header-bkg-desktop-1@1x.png);
+  //   @media (min-device-pixel-ratio: 2),
+  //     (min-resolution: 192dpi),
+  //     (min-resolution: 2dppx) {
+  //     background-image: linear-gradient(
+  //         rgba(0, 0, 0, 0.56),
+  //         rgba(0, 0, 0, 0.56)
+  //       ),
+  //       url(../images/header-bg/header-bkg-desktop-1@2x.png);
+  //   }
+  // }
+}
+.header-container {
   font-weight: 500;
   line-height: 1.17;
-
-  &-library {
-    background-position: top;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 230px;
-    width: 320px;
-    margin: 0 auto;
-    padding-top: 46px;
-    font-weight: 500;
-    line-height: 1.17;
-  }
-}
-.is-hidden {
-  visibility: hidden;
-  pointer-events: none;
-  height: 42px;
 }
 .logo {
   display: flex;
@@ -40,131 +60,137 @@
 }
 .site-name {
   font-size: 0px;
-  margin-left: auto;
+  margin-left: 10px;
+  @include tablet {
+    font-size: 30px;
+  }
 }
-.nav {
-  display: flex;
-  margin: 0 auto;
-  width: 278px;
-  font-size: $primary-font-size;
-  font-weight: 500;
-  line-height: 1.17;
-  color: $lighter-text-color;
+.is-hidden {
+  visibility: hidden;
+  pointer-events: none;
+  height: 42px;
 }
-.menu__container {
-  margin-left: auto;
-  align-self: flex-end;
-  height: 18px;
-}
+
 .nav-list {
-  align-items: center;
   display: flex;
-  justify-content: space-between;
-  position: relative;
 
-  li + li {
-    margin-left: 15px;
-  }
-
-  &__link-home-accent:hover {
-    color: $accent-color;
-    transition-duration: 0.5s;
-  }
-  &__link-library-accent:hover {
-    color: $accent-color;
-    transition-duration: 0.5s;
-  }
-  &__link-sign-in-accent:hover {
-    color: $accent-color;
-    transition-duration: 0.5s;
-  }
-
-  &__item-library-active::after {
-    content: '';
-    display: flex;
-    position: absolute;
-    bottom: 3;
-    width: 69px;
-    height: 3px;
-    background-color: $accent-color;
-    color: $lighter-text-color;
-  }
-
-  &__item-home-active::after {
-    content: '';
-    display: flex;
-    position: absolute;
-    bottom: 3;
-    width: 34px;
-    height: 3px;
-    background-color: $accent-color;
-  }
-}
-
-.sign-in__button {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  background-color: $transparent;
-  border: none;
+  // margin: 0 auto;
+  font-size: $primary-font-size;
   color: $lighter-text-color;
-  padding: 0;
 }
+// .menu__container {
+//   margin-left: auto;
+//   align-self: flex-end;
+//   height: 18px;
+// }
+// .nav-list {
+//   align-items: center;
+//   display: flex;
+//   justify-content: space-between;
+//   position: relative;
 
-.google__sign-in{
-  display: block;
-  margin-left: 2px;
-  width: 20px;
-  height: 20px;
-  background-image:
-      url('../images/logo-google-mini.png');
-}
+//   li + li {
+//     margin-left: 15px;
+//   }
 
-.display-name {
-  margin-right: 10px;
-}
-.nav-list__item-log-in {
-    display: flex;
-}
-.search {
-  display: flex;
-  align-items: flex-end;
-  height: 53px;
-  font-size: 14px;
-  &__form {
-    display: flex;
-    width: 280px;
-    height: 20px;
-    margin: 0 auto;
-    border-bottom: 0.2px solid #f7f7f7bd;
-  }
-  &__form:hover,
-  &__form:focus {
-    border-bottom: 0.2px solid $accent-color;
-  }
-  &__input {
-    border: none;
-    outline: none;
-    color: $lighter-text-color;
-    background: $transparent;
-    width: 100%;
-  }
-  &__img {
-    width: 15px;
-    height: 15px;
-    cursor: pointer;
-  }
-  &__img:hover {
-    width: 18px;
-    height: 18px;
-  }
-  &__btn {
-    background-color: $transparent;
-    border: none;
-    width: 20px;
-    outline: none;
-  }
-}
+//   &__link-home-accent:hover {
+//     color: $accent-color;
+//     transition-duration: 0.5s;
+//   }
+//   &__link-library-accent:hover {
+//     color: $accent-color;
+//     transition-duration: 0.5s;
+//   }
+//   &__link-sign-in-accent:hover {
+//     color: $accent-color;
+//     transition-duration: 0.5s;
+//   }
+
+//   &__item-library-active::after {
+//     content: '';
+//     display: flex;
+//     position: absolute;
+//     bottom: 3;
+//     width: 69px;
+//     height: 3px;
+//     background-color: $accent-color;
+//     color: $lighter-text-color;
+//   }
+
+//   &__item-home-active::after {
+//     content: '';
+//     display: flex;
+//     position: absolute;
+//     bottom: 3;
+//     width: 34px;
+//     height: 3px;
+//     background-color: $accent-color;
+//   }
+// }
+
+// .sign-in__button {
+//   display: flex;
+//   align-items: center;
+//   cursor: pointer;
+//   background-color: $transparent;
+//   border: none;
+//   color: $lighter-text-color;
+//   padding: 0;
+// }
+
+// .google__sign-in {
+//   display: block;
+//   margin-left: 2px;
+//   width: 20px;
+//   height: 20px;
+//   background-image: url('../images/logo-google-mini.png');
+// }
+
+// .display-name {
+//   margin-right: 10px;
+// }
+// .nav-list__item-log-in {
+//   display: flex;
+// }
+// .search {
+//   display: flex;
+//   align-items: flex-end;
+//   height: 53px;
+//   font-size: 14px;
+//   &__form {
+//     display: flex;
+//     width: 280px;
+//     height: 20px;
+//     margin: 0 auto;
+//     border-bottom: 0.2px solid #f7f7f7bd;
+//   }
+//   &__form:hover,
+//   &__form:focus {
+//     border-bottom: 0.2px solid $accent-color;
+//   }
+//   &__input {
+//     border: none;
+//     outline: none;
+//     color: $lighter-text-color;
+//     background: $transparent;
+//     width: 100%;
+//   }
+//   &__img {
+//     width: 15px;
+//     height: 15px;
+//     cursor: pointer;
+//   }
+//   &__img:hover {
+//     width: 18px;
+//     height: 18px;
+//   }
+//   &__btn {
+//     background-color: $transparent;
+//     border: none;
+//     width: 20px;
+//     outline: none;
+//   }
+// }
 
 ::-webkit-input-placeholder {
   color: $lighter-text-color;
@@ -178,181 +204,149 @@
 :-ms-input-placeholder {
   color: $lighter-text-color;
 }
-
-// .library__btns {
-//   display: flex;
-//   justify-content: space-between;
-//   margin: 0 auto;
-//   align-content: start;
-//   width: 280px;
-//   font-size: 12px;
-// }
-
-// .library__btn {
-//   height: 44px;
-//   border: 1px solid $lighter-text-color;
-//   border-radius: 5px;
-//   color: $lighter-text-color;
-//   background-color: $transparent;
-//   cursor: pointer;
-
-//   &-active {
-//     height: 44px;
-//     border: 1px solid $transparent;
-//     border-radius: 5px;
-//     color: $lighter-text-color;
-//     background-color: $accent-color;
-//     cursor: pointer;
-//   }
-//   &-watched {
-//     width: 130px;
-//   }
-//   &-queue {
-//     width: 130px;
-//   }
-// }
+//--------------------------------------------------------------------//
 
 // todo ======= mobile img === start
-@media screen and (max-width: 767px) {
-  .header__container {
-    background-image: linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 0.56),
-        rgba(0, 0, 0, 0.56)
-      ),
-      url('../images/header-bg/header-bkg-mobile-1@1x.png');
+// @media screen and (max-width: 767px) {
+//   .header__container {
+//     background-image: linear-gradient(
+//         to bottom,
+//         rgba(0, 0, 0, 0.56),
+//         rgba(0, 0, 0, 0.56)
+//       ),
+//       url('../images/header-bg/header-bkg-mobile-1@1x.png');
 
-    &-library {
-      background-image: linear-gradient(
-          rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)
-        ),
-        url('../images/header-bg/header-bkg-mobile-1@1x.png');
-    }
-  }
-}
-@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
-  (min-resolution: 192dpi) and (max-widtn: 767px),
-  (min-resolution: 2dppx) and (max-widtn: 767px) {
-  .header__container {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-      url('../images/header-bg/header-bkg-mobile-1@2x.png');
+//     &-library {
+//       background-image: linear-gradient(
+//           rgba(0, 0, 0, 0.56),
+//           rgba(0, 0, 0, 0.56)
+//         ),
+//         url('../images/header-bg/header-bkg-mobile-1@1x.png');
+//     }
+//   }
+// }
+// @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+//   (min-resolution: 192dpi) and (max-widtn: 767px),
+//   (min-resolution: 2dppx) and (max-widtn: 767px) {
+//   .header__container {
+//     background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+//       url('../images/header-bg/header-bkg-mobile-1@2x.png');
 
-    &-library {
-      background-image: linear-gradient(
-          rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)
-        ),
-        url('../images/header-bg/header-bkg-mobile-1@2x.png');
-    }
-  }
-}
+//     &-library {
+//       background-image: linear-gradient(
+//           rgba(0, 0, 0, 0.56),
+//           rgba(0, 0, 0, 0.56)
+//         ),
+//         url('../images/header-bg/header-bkg-mobile-1@2x.png');
+//     }
+//   }
+// }
 
-// todo ======= tablet img === start
-@media screen and (min-width: 768px) {
-  .header__container {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-      url('../images/header-bg/header-bkg-tablet-1@1x.png');
-    width: 768px;
-    padding-top: 46px;
-    &-library {
-      background-image: linear-gradient(
-          rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)
-        ),
-        url('../images/header-bg/header-bkg-tablet-1@1x.png');
-      width: 768px;
-      padding-top: 46px;
-      .logo__container {
-        width: 175px;
-      }
-      .nav {
-        width: 626px;
-      }
-    }
-    .logo__container {
-      width: 175px;
-    }
-    .nav {
-      width: 626px;
-    }
-  }
-  .site-name {
-    font-size: 30px;
-  }
-  .search {
-    height: 55px;
-    &__form {
-      width: 336px;
-    }
-  }
-  // .library__btns {
-  //   width: 287px;
-  // }
-  // .library__btn-watched {
-  //   width: 136px;
-  // }
-  // .library__btn-queue {
-  //   width: 136px;
-  // }
-}
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
-  (min-resolution: 192dpi) and (min-width: 768px),
-  (min-resolution: 2dppx) and (min-width: 768px) {
-  .header__container {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-      url('../images/header-bg/header-bkg-tablet-1@2x.png');
+// // todo ======= tablet img === start
+// @media screen and (min-width: 768px) {
+//   .header__container {
+//     background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+//       url('../images/header-bg/header-bkg-tablet-1@1x.png');
+//     width: 768px;
+//     padding-top: 46px;
+//     &-library {
+//       background-image: linear-gradient(
+//           rgba(0, 0, 0, 0.56),
+//           rgba(0, 0, 0, 0.56)
+//         ),
+//         url('../images/header-bg/header-bkg-tablet-1@1x.png');
+//       width: 768px;
+//       padding-top: 46px;
+//       .logo__container {
+//         width: 175px;
+//       }
+//       .nav {
+//         width: 626px;
+//       }
+//     }
+//     .logo__container {
+//       width: 175px;
+//     }
+//     .nav {
+//       width: 626px;
+//     }
+//   }
+//   .site-name {
+//     font-size: 30px;
+//   }
+//   .search {
+//     height: 55px;
+//     &__form {
+//       width: 336px;
+//     }
+//   }
+//   // .library__btns {
+//   //   width: 287px;
+//   // }
+//   // .library__btn-watched {
+//   //   width: 136px;
+//   // }
+//   // .library__btn-queue {
+//   //   width: 136px;
+//   // }
+// }
+// @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+//   (min-resolution: 192dpi) and (min-width: 768px),
+//   (min-resolution: 2dppx) and (min-width: 768px) {
+//   .header__container {
+//     background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+//       url('../images/header-bg/header-bkg-tablet-1@2x.png');
 
-    &-library {
-      background-image: linear-gradient(
-          rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)
-        ),
-        url('../images/header-bg/header-bkg-tablet-1@2x.png');
-    }
-  }
-}
-// todo ======= tablet img === start
-@media screen and (min-width: 1024px) {
-  .header__container {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-      url('../images/header-bg/header-bkg-desktop-1@1x.png');
-    width: 1024px;
-    .logo__container {
-      width: 175px;
-    }
-    .nav {
-      width: 882px;
-    }
-    &-library {
-      background-image: linear-gradient(
-          rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)
-        ),
-        url('../images/header-bg/header-bkg-desktop-1@1x.png');
-      width: 1024px;
-      .logo__container {
-        width: 175px;
-      }
-      .nav {
-        width: 882px;
-      }
-    }
-  }
-}
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 1024px),
-  (min-resolution: 192dpi) and (min-width: 1024px),
-  (min-resolution: 2dppx) and (min-width: 1024px) {
-  .header__container {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-      url('../images/header-bg/header-bkg-desktop-1@2x.png');
+//     &-library {
+//       background-image: linear-gradient(
+//           rgba(0, 0, 0, 0.56),
+//           rgba(0, 0, 0, 0.56)
+//         ),
+//         url('../images/header-bg/header-bkg-tablet-1@2x.png');
+//     }
+//   }
+// }
+// // todo ======= tablet img === start
+// @media screen and (min-width: 1280px) {
+//   .header__container {
+//     background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+//       url('../images/header-bg/header-bkg-desktop-1@1x.png');
+//     width: 1024px;
+//     .logo__container {
+//       width: 175px;
+//     }
+//     .nav {
+//       width: 882px;
+//     }
+//     &-library {
+//       background-image: linear-gradient(
+//           rgba(0, 0, 0, 0.56),
+//           rgba(0, 0, 0, 0.56)
+//         ),
+//         url('../images/header-bg/header-bkg-desktop-1@1x.png');
+//       width: 1280;
+//       .logo__container {
+//         width: 175px;
+//       }
+//       .nav {
+//         width: 882px;
+//       }
+//     }
+//   }
+// }
+// @media screen and (min-device-pixel-ratio: 2) and (min-width: 1280px),
+//   (min-resolution: 192dpi) and (min-width: 1280px),
+//   (min-resolution: 2dppx) and (min-width: 1280px) {
+//   .header__container {
+//     background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+//       url('../images/header-bg/header-bkg-desktop-1@2x.png');
 
-    &-library {
-      background-image: linear-gradient(
-          rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)
-        ),
-        url('../images/header-bg/header-bkg-desktop-1@2x.png');
-    }
-  }
-}
+//     &-library {
+//       background-image: linear-gradient(
+//           rgba(0, 0, 0, 0.56),
+//           rgba(0, 0, 0, 0.56)
+//         ),
+//         url('../images/header-bg/header-bkg-desktop-1@2x.png');
+//     }
+//   }
+// }
