--- a/src/sass/utils/main-gallery.scss
+++ b/src/sass/utils/main-gallery.scss
@@ -22,7 +22,6 @@
   }
 }
 .gallery__item {
-  background-color: $footer-background-color;
   border-radius: 5px;
 
   &:hover,
@@ -37,21 +36,36 @@
     flex-basis: calc((100% - 3 * 15px) / 3);
   }
 }
+.gallery-card__main {
+  position: relative;
+}
+.gallery-card__rating {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  @include font($primary-font-size, 1.16, 500, none);
+  color: $lighter-text-color;
+  background-color: rgba(255, 107, 1, 0.66);
+  border-radius: 5px;
+  padding: 4px 8px;
+  @include desktop {
+    padding: 6px 12px;
+  }
+}
+.gallery-card__content {
+  margin-top: 4px;
+  padding: 4px;
+  @include desktop {
+    padding: 6px;
+    margin-top: 6px;
+  }
+}
 .gallery-card__img {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-}
-.gallery-card {
-  width: 280px;
-  @include tablet {
-    width: 336px;
-  }
-  @include desktop {
-    max-width: 395px;
-  }
+  background-color: $footer-background-color;
 }
 .gallery-card__title {
-  margin-top: 8px;
   @include font($primary-font-size, 1.2, 500, none);
   font-style: normal;
   font-family: 'Roboto';
@@ -59,7 +73,6 @@
     @include font(none, 1.3, none, none);
   }
   @include desktop {
-    margin-top: 12px;
     @include font(20px, 1.16, none, none);
   }
 }
@@ -70,17 +83,5 @@
   color: $accent-color;
   @include desktop {
     @include font(20px, 1.2, none, none);
-  }
-}
-.gallery-card__rating {
-  @include font($primary-font-size, 1.16, 500, none);
-  color: $lighter-text-color;
-  background-color: $accent-color;
-  border-radius: 5px;
-  padding: 1px 6px;
-  margin-left: 9px;
-  @include desktop {
-    padding: 3px 11px;
-    margin-left: 8px;
   }
 }
