--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,35 +1,35 @@
 <header class="header">
   <div class="container header-container">
-    <div class="logo__container">
-      <a href="./index.html" class="logo logo__link">
-        <svg class="logo__img">
-          <use href="./images/sprite.svg#icon-logo"></use>
-        </svg>
-        <p class="site-name">Filmoteka</p>
-      </a>
-    </div>
-    <nav class="nav-list">
-      <!-- <ul class="nav-list list"> -->
-      <li class="nav-list__item-home nav-list__item-home-active">
-        <a
-          href="#"
-          class="nav-list__link-home nav-list__link-home-accent link"
-          data-home
-          >HOME</a
-        >
-      </li>
-      <li class="nav-list__item-library">
-        <a
-          href="#"
-          class="nav-list__link-library nav-list__link-library-accent link"
-          data-library
-          >MY LIBRARY</a
-        >
-      </li>
-      <!-- </ul> -->
-    </nav>
-    <div class="menu__container">
-      <ul>
+    <div class="header-panel">
+      <div class="logo__container">
+        <a href="./index.html" class="logo logo__link">
+          <svg class="logo__img">
+            <use href="./images/sprite.svg#icon-logo"></use>
+          </svg>
+          <p class="site-name">Filmoteka</p>
+        </a>
+      </div>
+      <nav class="nav-list">
+        <!-- <ul class="nav-list list"> -->
+        <li class="nav-list__item-home nav-list__item-home-active">
+          <a
+            href="#"
+            class="nav-list__link-home nav-list__link-home-accent link"
+            data-home
+            >HOME</a
+          >
+        </li>
+        <li class="nav-list__item-library">
+          <a
+            href="#"
+            class="nav-list__link-library nav-list__link-library-accent link"
+            data-library
+            >MY LIBRARY</a
+          >
+        </li>
+        <!-- </ul> -->
+      </nav>
+      <!-- <ul>
         <li class="nav-list__item-sign-in">
           <button
             type="button"
@@ -49,8 +49,9 @@
             LOGOUT
           </button>
         </li>
-      </ul>
+      </ul> -->
     </div>
+    <!-- <div class="menu__container"></div> -->
     <div class="search">
       <form class="search__form">
         <input
@@ -70,12 +71,11 @@
         </button>
       </form>
 
-      <p class="hero__search-error is-hidden">
+      <p class="hero__search-error visually-hidden">
         Search result not successful. Enter the correct movie name and try
         again!
       </p>
     </div>
-
     <div class="library-filter visually-hidden">
       <button type="button" class="library-filter__btn" data-watched>
         WATCHED
@@ -84,41 +84,37 @@
         QUEUE
       </button>
     </div>
-
     <div class="color-switcher">
-  <form class="menu-switch">
-    <label class="menu-switch__label"
-      ><input
-        type="checkbox"
-        name="menu-switch"
-        value="core"
-        class="menu-switch__check visually-hidden" /><span
-        class="menu-switch__thumb"
-        ><svg class="menu-switch__icon" width="15" height="15">
-          <use
-            href="./images/sprite.svg#icon-brightness"
-          ></use></svg></span
-    ></label>
-  </form>
-</div>
+      <form class="menu-switch">
+        <label class="menu-switch__label"
+          ><input
+            type="checkbox"
+            name="menu-switch"
+            value="core"
+            class="menu-switch__check visually-hidden" /><span
+            class="menu-switch__thumb"
+            ><svg class="menu-switch__icon" width="15" height="15">
+              <use href="./images/sprite.svg#icon-brightness"></use></svg></span
+        ></label>
+      </form>
+    </div>
   </div>
   <!-- Filter -->
   <div class="container">
-  <form class="filter-genre" id="filter-form">
-    <label class="filter-label">Choose genre:</label>
-    <select name="genres" id="genres">
-      <option value="genres">all genres</option>
-    </select></div>
-    
-
-    <!-- Filter -->
-
     <form class="filter-genre" id="filter-form">
       <label class="filter-label">Choose genre:</label>
       <select name="genres" id="genres">
         <option value="genres">all genres</option>
       </select>
     </form>
-  </div>
 
+    <!-- Filter -->
+
+    <!-- <form class="filter-genre" id="filter-form">
+      <label class="filter-label">Choose genre:</label>
+      <select name="genres" id="genres">
+        <option value="genres">all genres</option>
+      </select>
+    </form> -->
+  </div>
 </header>
