--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -8,59 +8,66 @@
   min-width: 320px;
   padding-top: 40px;
   padding-bottom: 60px;
-  // background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-  //   url(../images/header-bg/header-bkg-mobile-1@1x.png);
+  position: relative;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+    url(../images/header-bg/header-bkg-mobile-1@1x.png);
 
-  // @media (min-device-pixel-ratio: 2),
-  //   (min-resolution: 192dpi),
-  //   (min-resolution: 2dppx) {
-  //   background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-  //     url(../images/header-bg/header-bkg-mobile-1@2x.png);
-  // }
-  // @include tablet {
-  //   background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-  //     url(../images/header-bg/header-bkg-tablet-1@1x.png);
-  //   @media (min-device-pixel-ratio: 2),
-  //     (min-resolution: 192dpi),
-  //     (min-resolution: 2dppx) {
-  //     background-image: linear-gradient(
-  //         rgba(0, 0, 0, 0.56),
-  //         rgba(0, 0, 0, 0.56)
-  //       ),
-  //       url(../images/header-bg/header-bkg-tablet-1@2x.png);
-  //   }
-  // }
-  // @include desktop {
-  //   background-image: linear-gradient(
-  //       rgba(47, 48, 58, 0.4),
-  //       rgba(47, 48, 58, 0.4)
-  //     ),
-  //     url(../images/header-bg/header-bkg-desktop-1@1x.png);
-  //   @media (min-device-pixel-ratio: 2),
-  //     (min-resolution: 192dpi),
-  //     (min-resolution: 2dppx) {
-  //     background-image: linear-gradient(
-  //         rgba(0, 0, 0, 0.56),
-  //         rgba(0, 0, 0, 0.56)
-  //       ),
-  //       url(../images/header-bg/header-bkg-desktop-1@2x.png);
-  //   }
-  // }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/header-bg/header-bkg-mobile-1@2x.png);
+  }
+  @include tablet {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/header-bg/header-bkg-tablet-1@1x.png);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          rgba(0, 0, 0, 0.56),
+          rgba(0, 0, 0, 0.56)
+        ),
+        url(../images/header-bg/header-bkg-tablet-1@2x.png);
+    }
+  }
+  @include desktop {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/header-bg/header-bkg-desktop-1@1x.png);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          rgba(0, 0, 0, 0.56),
+          rgba(0, 0, 0, 0.56)
+        ),
+        url(../images/header-bg/header-bkg-desktop-1@2x.png);
+    }
+  }
 }
 .header-container {
   font-weight: 500;
   line-height: 1.17;
 }
+.header-panel {
+  display: flex;
+}
 .logo {
   display: flex;
+  justify-content: center;
+  align-items: center;
   &__img {
     width: 25px;
-    height: 35px;
+    height: 25px;
   }
 }
 .site-name {
   font-size: 0px;
   margin-left: 10px;
+  color: #ffffff;
   @include tablet {
     font-size: 30px;
   }
@@ -70,10 +77,10 @@
   pointer-events: none;
   height: 42px;
 }
-
 .nav-list {
+  margin-left: auto;
   display: flex;
-
+  column-gap: 40px;
   // margin: 0 auto;
   font-size: $primary-font-size;
   color: $lighter-text-color;
@@ -152,45 +159,43 @@
 // .nav-list__item-log-in {
 //   display: flex;
 // }
-// .search {
-//   display: flex;
-//   align-items: flex-end;
-//   height: 53px;
-//   font-size: 14px;
-//   &__form {
-//     display: flex;
-//     width: 280px;
-//     height: 20px;
-//     margin: 0 auto;
-//     border-bottom: 0.2px solid #f7f7f7bd;
-//   }
-//   &__form:hover,
-//   &__form:focus {
-//     border-bottom: 0.2px solid $accent-color;
-//   }
-//   &__input {
-//     border: none;
-//     outline: none;
-//     color: $lighter-text-color;
-//     background: $transparent;
-//     width: 100%;
-//   }
-//   &__img {
-//     width: 15px;
-//     height: 15px;
-//     cursor: pointer;
-//   }
-//   &__img:hover {
-//     width: 18px;
-//     height: 18px;
-//   }
-//   &__btn {
-//     background-color: $transparent;
-//     border: none;
-//     width: 20px;
-//     outline: none;
-//   }
-// }
+.search {
+  margin-top: 54px;
+  font-size: 14px;
+}
+.search__form {
+  display: flex;
+  max-width: 340px;
+  height: 20px;
+  margin: 0 auto;
+  border-bottom: 0.2px solid #f7f7f7bd;
+}
+.search__form:hover,
+.search__form:focus {
+  border-bottom: 0.2px solid $accent-color;
+}
+.search__input {
+  border: none;
+  outline: none;
+  color: $lighter-text-color;
+  background: $transparent;
+  width: 100%;
+}
+.search__img {
+  width: 15px;
+  height: 15px;
+  cursor: pointer;
+}
+.search__img:hover {
+  width: 18px;
+  height: 18px;
+}
+.search__btn {
+  background-color: $transparent;
+  border: none;
+  width: 20px;
+  outline: none;
+}
 
 ::-webkit-input-placeholder {
   color: $lighter-text-color;
