--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,7 +13,7 @@
         <ul class="nav-list list">
           <li class="nav-list__item-home nav-list__item-home-active">
             <a
-              href="#"
+              href="./index.html"
               class="nav-list__link-home nav-list__link-home-accent link"
               >HOME</a
             >
@@ -40,6 +40,7 @@
             <span class="display-name"></span>
             <button
               type="button"
+              onClick="window.location.reload();"
               class="sign-in__button nav-list__link-sign-in nav-list__link-sign-in-accent"
               data-sign-out
             >
