--- a/src/partials/main/main.html
+++ b/src/partials/main/main.html
@@ -1,10 +1,14 @@
 <main>
   <section class="gallery-section">
     <div class="container">
+      <div class="sign-in-wrapper visually-hidden">
+          <img src="./images/sign-in.png">
+      </div>
       <div class="gallery">
         <h2 class="visually-hidden">MOVIES GALLERY</h2>
 
         <ul class="gallery__list">
+        
           <!-- <li class="gallery__item">
             <div class="gallery-card"></div>
 
@@ -25,6 +29,9 @@
               <span class="gallery-card__rating">10.0</span>
             </p>
           </li> -->
+        </ul>
+        <ul class="gallery__list--library visually-hidden">
+      
         </ul>
       </div>
     </div>
