--- a/src/sass/utils/main-gallery.scss
+++ b/src/sass/utils/main-gallery.scss
@@ -6,6 +6,11 @@
     padding-bottom: 50px;
   }
 }
+
+.sign-in-wrapper {
+  display: flex;
+  justify-content: center;
+}
 .gallery__list {
   display: flex;
   flex-wrap: wrap;
