--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,49 +9,40 @@
           <p class="site-name">Filmoteka</p>
         </a>
       </div>
-      <nav class="nav-list">
-        <!-- <ul class="nav-list list"> -->
-        <li class="nav-list__item-home nav-list__item-home-active">
-          <a
-            href="#"
-            class="nav-list__link-home nav-list__link-home-accent link"
-            data-home
-            >HOME</a
-          >
-        </li>
-        <li class="nav-list__item-library">
-          <a
-            href="#"
-            class="nav-list__link-library nav-list__link-library-accent link"
-            data-library
-            >MY LIBRARY</a
-          >
-        </li>
-        <!-- </ul> -->
-      </nav>
-      <!-- <ul>
-        <li class="nav-list__item-sign-in">
-          <button
-            type="button"
-            class="sign-in__button nav-list__link-sign-in nav-list__link-sign-in-accent"
-            data-sign-in
-          >
-            <span>SIGN IN</span><span class="google__sign-in"></span>
-          </button>
-        </li>
-        <li class="nav-list__item-log-in is-hidden backdrop">
-          <span class="display-name"></span>
-          <button
-            type="button"
-            class="sign-in__button nav-list__link-sign-in nav-list__link-sign-in-accent"
-            data-sign-out
-          >
-            LOGOUT
-          </button>
-        </li>
-      </ul> -->
+      <div class="header-control">
+        <nav class="nav-list">
+          <li class="nav-list__item-home nav-list__item-home-active">
+            <a
+              href="#"
+              class="nav-list__link-home nav-list__link-home-accent link"
+              data-home
+              >HOME</a
+            >
+          </li>
+          <li class="nav-list__item-library">
+            <a
+              href="#"
+              class="nav-list__link-library nav-list__link-library-accent link"
+              data-library
+              >MY LIBRARY</a
+            >
+          </li>
+        </nav>
+        <div class="autorization">
+          <div class="autorization-sign-in">
+            <button type="button" class="sign-in__button" data-sign-in>
+              <span>SIGN IN</span><span class="google__sign-in"></span>
+            </button>
+          </div>
+          <div class="autorization__log-in is-hidden backdrop">
+            <span class="display-name"></span>
+            <button type="button" class="sign-in__button" data-sign-out>
+              LOGOUT
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
-    <!-- <div class="menu__container"></div> -->
     <div class="search">
       <form class="search__form">
         <input
@@ -98,23 +89,15 @@
         ></label>
       </form>
     </div>
-  </div>
-  <!-- Filter -->
-  <div class="container">
-    <form class="filter-genre" id="filter-form">
-      <label class="filter-label">Choose genre:</label>
-      <select name="genres" id="genres">
-        <option value="genres">all genres</option>
-      </select>
-    </form>
 
     <!-- Filter -->
-
-    <!-- <form class="filter-genre" id="filter-form">
-      <label class="filter-label">Choose genre:</label>
-      <select name="genres" id="genres">
-        <option value="genres">all genres</option>
-      </select>
-    </form> -->
+    <div class="filter-container">
+      <form class="filter-genre" id="filter-form">
+        <label class="filter-label">Choose genre:</label>
+        <select name="genres" id="genres">
+          <option value="genres">all genres</option>
+        </select>
+      </form>
+    </div>
   </div>
 </header>
