--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -7,8 +7,7 @@
   margin: 0 auto;
   min-width: 320px;
   padding-top: 40px;
-  padding-bottom: 60px;
-  position: relative;
+  padding-bottom: 40px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
     url(../images/header-bg/header-bkg-mobile-1@1x.png);
 
@@ -50,6 +49,7 @@
 }
 .header-container {
   font-weight: 500;
+  position: relative;
   line-height: 1.17;
 }
 .header-panel {
@@ -75,90 +75,71 @@
 .is-hidden {
   visibility: hidden;
   pointer-events: none;
-  height: 42px;
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  position: absolute;
 }
 .nav-list {
-  margin-left: auto;
+  margin-right: 30px;
   display: flex;
-  column-gap: 40px;
+  column-gap: 20px;
   // margin: 0 auto;
   font-size: $primary-font-size;
   color: $lighter-text-color;
+  @include tablet {
+    column-gap: 40px;
+    margin-right: 60px;
+  }
 }
-// .menu__container {
-//   margin-left: auto;
-//   align-self: flex-end;
-//   height: 18px;
-// }
-// .nav-list {
-//   align-items: center;
-//   display: flex;
-//   justify-content: space-between;
-//   position: relative;
+.sign-in__button {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  background-color: $transparent;
+  border: 1px solid $accent-color;
+  color: $lighter-text-color;
+  padding: 5px;
+  border-radius: 15px;
+  font-size: $primary-font-size;
+}
+.header-control {
+  margin-left: auto;
+  display: flex;
+  @include tablet {
+    align-items: center;
+  }
 
-//   li + li {
-//     margin-left: 15px;
-//   }
+  margin-top: 5px;
+  @include desktop {
+    margin-top: 10px;
+  }
+}
+.google__sign-in {
+  display: block;
+  margin-left: 5px;
+  width: 20px;
+  height: 20px;
+  background-image: url('../images/logo-google-mini.png');
+}
+.display-name {
+  display: block;
+  margin-bottom: 5px;
+  @include tablet {
+    margin-bottom: 0;
+    margin-right: 10px;
+  }
 
-//   &__link-home-accent:hover {
-//     color: $accent-color;
-//     transition-duration: 0.5s;
-//   }
-//   &__link-library-accent:hover {
-//     color: $accent-color;
-//     transition-duration: 0.5s;
-//   }
-//   &__link-sign-in-accent:hover {
-//     color: $accent-color;
-//     transition-duration: 0.5s;
-//   }
+  color: #ffffff;
+  font-size: $primary-font-size;
+}
+.autorization__log-in {
+  @include tablet {
+    display: flex;
+    align-items: center;
+  }
+}
 
-//   &__item-library-active::after {
-//     content: '';
-//     display: flex;
-//     position: absolute;
-//     bottom: 3;
-//     width: 69px;
-//     height: 3px;
-//     background-color: $accent-color;
-//     color: $lighter-text-color;
-//   }
-
-//   &__item-home-active::after {
-//     content: '';
-//     display: flex;
-//     position: absolute;
-//     bottom: 3;
-//     width: 34px;
-//     height: 3px;
-//     background-color: $accent-color;
-//   }
-// }
-
-// .sign-in__button {
-//   display: flex;
-//   align-items: center;
-//   cursor: pointer;
-//   background-color: $transparent;
-//   border: none;
-//   color: $lighter-text-color;
-//   padding: 0;
-// }
-
-// .google__sign-in {
-//   display: block;
-//   margin-left: 2px;
-//   width: 20px;
-//   height: 20px;
-//   background-image: url('../images/logo-google-mini.png');
-// }
-
-// .display-name {
-//   margin-right: 10px;
-// }
-// .nav-list__item-log-in {
-//   display: flex;
-// }
 .search {
   margin-top: 54px;
   font-size: 14px;
@@ -209,149 +190,3 @@
 :-ms-input-placeholder {
   color: $lighter-text-color;
 }
-//--------------------------------------------------------------------//
-
-// todo ======= mobile img === start
-// @media screen and (max-width: 767px) {
-//   .header__container {
-//     background-image: linear-gradient(
-//         to bottom,
-//         rgba(0, 0, 0, 0.56),
-//         rgba(0, 0, 0, 0.56)
-//       ),
-//       url('../images/header-bg/header-bkg-mobile-1@1x.png');
-
-//     &-library {
-//       background-image: linear-gradient(
-//           rgba(0, 0, 0, 0.56),
-//           rgba(0, 0, 0, 0.56)
-//         ),
-//         url('../images/header-bg/header-bkg-mobile-1@1x.png');
-//     }
-//   }
-// }
-// @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
-//   (min-resolution: 192dpi) and (max-widtn: 767px),
-//   (min-resolution: 2dppx) and (max-widtn: 767px) {
-//   .header__container {
-//     background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-//       url('../images/header-bg/header-bkg-mobile-1@2x.png');
-
-//     &-library {
-//       background-image: linear-gradient(
-//           rgba(0, 0, 0, 0.56),
-//           rgba(0, 0, 0, 0.56)
-//         ),
-//         url('../images/header-bg/header-bkg-mobile-1@2x.png');
-//     }
-//   }
-// }
-
-// // todo ======= tablet img === start
-// @media screen and (min-width: 768px) {
-//   .header__container {
-//     background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-//       url('../images/header-bg/header-bkg-tablet-1@1x.png');
-//     width: 768px;
-//     padding-top: 46px;
-//     &-library {
-//       background-image: linear-gradient(
-//           rgba(0, 0, 0, 0.56),
-//           rgba(0, 0, 0, 0.56)
-//         ),
-//         url('../images/header-bg/header-bkg-tablet-1@1x.png');
-//       width: 768px;
-//       padding-top: 46px;
-//       .logo__container {
-//         width: 175px;
-//       }
-//       .nav {
-//         width: 626px;
-//       }
-//     }
-//     .logo__container {
-//       width: 175px;
-//     }
-//     .nav {
-//       width: 626px;
-//     }
-//   }
-//   .site-name {
-//     font-size: 30px;
-//   }
-//   .search {
-//     height: 55px;
-//     &__form {
-//       width: 336px;
-//     }
-//   }
-//   // .library__btns {
-//   //   width: 287px;
-//   // }
-//   // .library__btn-watched {
-//   //   width: 136px;
-//   // }
-//   // .library__btn-queue {
-//   //   width: 136px;
-//   // }
-// }
-// @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
-//   (min-resolution: 192dpi) and (min-width: 768px),
-//   (min-resolution: 2dppx) and (min-width: 768px) {
-//   .header__container {
-//     background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-//       url('../images/header-bg/header-bkg-tablet-1@2x.png');
-
-//     &-library {
-//       background-image: linear-gradient(
-//           rgba(0, 0, 0, 0.56),
-//           rgba(0, 0, 0, 0.56)
-//         ),
-//         url('../images/header-bg/header-bkg-tablet-1@2x.png');
-//     }
-//   }
-// }
-// // todo ======= tablet img === start
-// @media screen and (min-width: 1280px) {
-//   .header__container {
-//     background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-//       url('../images/header-bg/header-bkg-desktop-1@1x.png');
-//     width: 1024px;
-//     .logo__container {
-//       width: 175px;
-//     }
-//     .nav {
-//       width: 882px;
-//     }
-//     &-library {
-//       background-image: linear-gradient(
-//           rgba(0, 0, 0, 0.56),
-//           rgba(0, 0, 0, 0.56)
-//         ),
-//         url('../images/header-bg/header-bkg-desktop-1@1x.png');
-//       width: 1280;
-//       .logo__container {
-//         width: 175px;
-//       }
-//       .nav {
-//         width: 882px;
-//       }
-//     }
-//   }
-// }
-// @media screen and (min-device-pixel-ratio: 2) and (min-width: 1280px),
-//   (min-resolution: 192dpi) and (min-width: 1280px),
-//   (min-resolution: 2dppx) and (min-width: 1280px) {
-//   .header__container {
-//     background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-//       url('../images/header-bg/header-bkg-desktop-1@2x.png');
-
-//     &-library {
-//       background-image: linear-gradient(
-//           rgba(0, 0, 0, 0.56),
-//           rgba(0, 0, 0, 0.56)
-//         ),
-//         url('../images/header-bg/header-bkg-desktop-1@2x.png');
-//     }
-//   }
-// }
