--- a/src/sass/utils/main-gallery.scss
+++ b/src/sass/utils/main-gallery.scss
@@ -25,11 +25,11 @@
   background-color: transparent;
 
   border-radius: 5px;
-
+  // color: rgb(255, 107, 8);
   &:hover,
   &:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
+    box-shadow: 0px 1px 1px rgba(255, 107, 8, 0.12),
+      0px 4px 4px rgba(255, 107, 8, 0.06), 1px 4px 6px rgba(255, 107, 8, 0.16);
   }
   @include tablet {
     flex-basis: calc((100% - 2 * 30px) / 2);
