--- a/src/partials/card-modal.html
+++ b/src/partials/card-modal.html
@@ -1,20 +1,20 @@
-<div class="modal">
-    <div class="modal_wrapper">
+<div class="backdrop is-hidden" data-modal>
+    <div class="modal">
            <button type="button" class="close-btn">
               <svg class="close-btn__icon">
-                  <use href="#"></use>
+                  <use href="/src/images/sprite.svg#icon-close"></use>
               </svg>
            </button>
         <div class="modal_content">
              <div class="poster">
                 <picture>
-                    <source media="(min-width: 1024px)"
-                        srcset="#1024" class="large">
-                    <source media="(min-width: 768px)"
-                        srcset="#768" class="medium"> 
-                    <source media="(min-width: 320px)"
-                        srcset="#320" class="small">
-                    <img src="#" alt="movie's poster">
+                    <!-- <source media="(min-width: 1024px)"
+                        srcset="#" class="large"> -->
+                    <!-- <source media="(min-width: 768px)"
+                        srcset="#" class="medium">  -->
+                    <!-- <source media="(min-width: 320px)"
+                        srcset="#" class="small"> -->
+                    <img src="#" alt="moviesPoster"/>
                 </picture>
              </div>
              <div class="content">
