--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -38,7 +38,7 @@
               <span>SIGN IN</span><span class="google__sign-in"></span>
             </button>
           </div>
-          <div class="autorization__log-in is-hidden backdrop">
+          <div class="autorization__log-in is-hidden">
             <span class="display-name"></span>
             <button
               type="button"
