--- a/src/sass/utils/main-gallery.scss
+++ b/src/sass/utils/main-gallery.scss
@@ -26,6 +26,25 @@
     margin-right: -15px;
   }
 }
+
+.gallery__list--library {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 20px;
+
+  @include tablet {
+    row-gap: 30px;
+    column-gap: 30px;
+    margin-right: -30px;
+  }
+
+  @include desktop {
+    row-gap: 30px;
+    column-gap: 15px;
+    margin-right: -15px;
+  }
+}
+
 .gallery__item {
   background-color: transparent;
 
