--- a/src/sass/utils/main-gallery.scss
+++ b/src/sass/utils/main-gallery.scss
@@ -11,6 +11,11 @@
   display: flex;
   justify-content: center;
 }
+
+#img-sign-in {
+  border-radius: 29px;
+}
+
 .gallery__list {
   display: flex;
   flex-wrap: wrap;
