--- a/src/partials/main/main.html
+++ b/src/partials/main/main.html
@@ -2,7 +2,7 @@
   <section class="gallery-section">
     <div class="container">
       <div class="sign-in-wrapper visually-hidden">
-          <img src="./images/sign-in.png">
+          <img id="img-sign-in" src="./images/sign-in.png">
       </div>
       <div class="gallery">
         <h2 class="visually-hidden">MOVIES GALLERY</h2>
