--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -42,6 +42,7 @@
             <span class="display-name"></span>
             <button
               type="button"
+              onClick="window.location.reload();"
               class="sign-in__button header-control__btn--focus"
               data-sign-out
             >
