--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,6 +16,8 @@
               href="#"
               class="nav-list__link-home header-control__btn--focus link nav-list__link--selected"
               data-home
+              href="./index.html"
+              class="nav-list__link-home nav-list__link-home-accent link"
               >HOME</a
             >
           </li>
