--- a/src/partials/card-modal.html
+++ b/src/partials/card-modal.html
@@ -17,6 +17,7 @@
                 <h2 class="film_title"></h2>
                     <div class="title-position">
                        <ul class="title_list_position">
+                            <li class="title_item_id is-hidden"></li>
                             <li class="title_item"><span class="title_list_value a">Vote / Votes</span><span class="contents_value"><span class="highlight vote_average"></span> / <span class="highlight_all vote_count"></span></span></li>
                             <li class="title_item"><span class="title_list_value b">Popularity</span><span class="contents_value popularity"></span></li>
                             <li class="title_item"><span class="title_list_value c">Original Title</span><span class="contents_value original_title"></span></li>
