--- a/src/partials/card-modal.html
+++ b/src/partials/card-modal.html
@@ -26,8 +26,9 @@
                     </div>
                       <h3 class="description_title">About</h3>
                       <p class="description"></p>
-                    <button class="modal_card_btn is-active wached">ADD TO WATCHED</button>
-                    <button class="modal_card_btn queue">ADD TO QUEUE</button>
+                    <button class="modal_card_btn is-active wached visually-hidden">ADD TO WATCHED</button>
+                    <button class="modal_card_btn queue visually-hidden">ADD TO QUEUE</button>
+                    <br><span class="sign_notific">To add a movie to the library please sign in to your account</span>
              </div>
         </div>
     </div>
